發展年表切板完成

--- a/01-About.html
+++ b/01-About.html
@@ -151,31 +151,32 @@
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2018</h6>
-                                                <p>成立說茶、說菜、說書 台南市永樂町鼓茶樓</p>
+                                                <div class="text-02">成立說茶、說菜、說書 台南市永樂町鼓茶樓</div>
+
                                             </div>
                                         </div>
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2016</h6>
-                                                <p>文創園區入圍WAF世界建築獎舊創新獎項</p>
+                                                <div class="text-02">文創園區入圍WAF世界建築獎舊創新獎項</div>
                                             </div>
                                         </div>
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2014</h6>
-                                                <p>英國愛丁堡藝穗節; 評選9.5顆星音樂團隊</p>
+                                                <div class="text-02">英國愛丁堡藝穗節; 評選9.5顆星音樂團隊</div>
                                             </div>
                                         </div>
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2012</h6>
-                                                <p>公視報導，定目劇成功案例</p>
+                                                <div class="text-02">公視報導，定目劇成功案例</div>
                                             </div>
                                         </div>
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2011</h6>
-                                                <p>第二文創園區 十鼓高雄橋糖文創園區</p>
+                                                <div class="text-02">第二文創園區 十鼓高雄橋糖文創園區</div>
                                             </div>
                                         </div>
                                     </div>
@@ -185,19 +186,19 @@
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2009</h6>
-                                                <p>入圍第52屆葛萊美獎; 第9屆美國獨立音樂獎</p>
+                                                <div class="text-02">入圍第52屆葛萊美獎; 第9屆美國獨立音樂獎</div>
                                             </div>
                                         </div>
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2007</h6>
-                                                <p>正式開幕，第一屆十鼓節</p>
+                                                <div class="text-02">正式開幕，第一屆十鼓節</div>
                                             </div>
                                         </div>
                                         <div class="time-container right">
                                             <div class="time-content">
                                                 <h6>2000</h6>
-                                                <p>台南創立十鼓擊樂團 受邀至澳洲雪梨奧運聖火傳遞巡演</p>
+                                                <div class="text-02">台南創立十鼓擊樂團 受邀至澳洲雪梨奧運聖火傳遞巡演</div>
                                             </div>
                                         </div>
                                     </div>
