標題及簡介增加旋轉效果

--- a/01-About.html
+++ b/01-About.html
@@ -93,7 +93,7 @@
         <div id="apple_effect">
             <!-- 關於十鼓標題 -->
             <div class="parallax_window">
-                <div class="effect_box lax" data-lax-opacity="0 1 , 500 0" data-lax-scale="0 1, 500 3">
+                <div class="effect_box lax" data-lax-opacity="0 1 , 500 0" data-lax-scale="0 1, 500 3" data-lax-rotate="0 0, 500 360">
                     <div class="sec-01 sec">
                     </div>
                 </div>
@@ -103,7 +103,7 @@
             <!-- 關於十鼓簡介 -->
             <div class="parallax_window">
                 <div class="effect_box lax " data-lax-opacity="500 0, 750 1, 1500 0"
-                    data-lax-scale="500 3, 750 1, 1400 1, 1500 0">
+                    data-lax-scale="500 3, 750 1, 1400 1, 1500 0" data-lax-rotate="500 0, 1300 0, 1500 -360">
                     <div class="sec-02 sec ">
                         <div class="About ">
                             <div class="about-title-00">關於十鼓</div>
