關於調慢旋轉效果拿掉

--- a/01-About.html
+++ b/01-About.html
@@ -93,7 +93,7 @@
         <div id="apple_effect">
             <!-- 關於十鼓標題 -->
             <div class="parallax_window">
-                <div class="effect_box lax" data-lax-opacity="0 1 , 500 0" data-lax-scale="0 1, 500 3" data-lax-rotate="0 0, 500 360">
+                <div class="effect_box lax" data-lax-opacity="0 1 , 500 0" data-lax-scale="0 1, 500 3">
                     <div class="sec-01 sec">
                     </div>
                 </div>
@@ -102,8 +102,8 @@
 
             <!-- 關於十鼓簡介 -->
             <div class="parallax_window">
-                <div class="effect_box lax " data-lax-opacity="500 0, 750 1, 1500 0"
-                    data-lax-scale="500 3, 750 1, 1400 1, 1500 0" data-lax-rotate="500 0, 1300 0, 1500 -360">
+                <div class="effect_box lax " data-lax-opacity="500 0, 1000 1, 2000 0"
+                    data-lax-scale="500 3, 1000 1, 1800 1, 2000 0">
                     <div class="sec-02 sec ">
                         <div class="About ">
                             <div class="about-title-00">關於十鼓</div>
@@ -119,8 +119,8 @@
 
             <!-- 沿革 -->
             <div class="parallax_window">
-                <div class="effect_box lax" data-lax-opacity="1500 0, 1750 1, 2500 0"
-                    data-lax-scale="1500 3, 1750 1, 2400 1, 2500 0">
+                <div class="effect_box lax" data-lax-opacity="2000 0, 2500 1, 3500 0"
+                    data-lax-scale="2000 3, 2500 1, 3300 1, 3500 0">
                     <div class="sec-03 sec">
                         <div class="About">
                             <div class="about-title-01">沿革</div>
@@ -140,8 +140,8 @@
 
             <!-- 發展年表 -->
             <div class="parallax_window">
-                <div class="effect_box lax " data-lax-opacity="2500 0, 2750 1, 3500 0"
-                    data-lax-scale="2500 3, 2750 1, 3400 1, 3500 0">
+                <div class="effect_box lax " data-lax-opacity="3500 0, 4000 1, 5000 0"
+                    data-lax-scale="3500 3, 4000 1, 4800 1, 5000 0">
                     <div class="sec-04 sec ">
                         <div class="About-02">
                             <div class="about-title-02">發展年表</div>
@@ -212,8 +212,8 @@
 
             <!-- 核心價值 -->
             <div class="parallax_window">
-                <div class="effect_box lax" data-lax-opacity="3500 0, 3750 1, 4500 0"
-                    data-lax-scale="3500 3, 3750 1, 4400 1, 4500 0">
+                <div class="effect_box lax" data-lax-opacity="5000 0, 5500 1, 6500 0"
+                    data-lax-scale="5000 3, 5500 1, 6300 1, 6500 0">
                     <div class="sec-05 sec">
                         <div class=" About-03">
                             <div class="about-title-00">核心價值</div>
@@ -237,8 +237,8 @@
 
             <!-- 園區主題介紹 -->
             <div class="parallax_window">
-                <div class="effect_box lax" data-lax-opacity="4500 0, 4750 1, 5500 0"
-                    data-lax-scale="4500 3, 4750 1, 5400 1, 5500 0">
+                <div class="effect_box lax" data-lax-opacity="6500 0, 7000 1, 8000 0"
+                    data-lax-scale="6500 3, 7000 1, 7800 1, 8000 0">
                     <div class="sec-06 sec">
                         <div class="About-06">
                             <div class="en-title">ABOUT <u
@@ -254,8 +254,8 @@
 
             <!-- 鼓樂饗宴 -->
             <div class="parallax_window">
-                <div class="effect_box lax" data-lax-opacity="5500 0, 5750 1, 6500 0"
-                    data-lax-scale="5500 3, 5750 1, 6400 1, 6500 0">
+                <div class="effect_box lax" data-lax-opacity="8000 0, 8500 1, 9500 0"
+                    data-lax-scale="8000 3, 8500 1, 9300 1, 9500 0">
                     <div class="sec-07">
                         <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-01" alt="背景左">
                         <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-02" alt="背景右">
@@ -289,8 +289,8 @@
 
             <!-- 極限體驗 -->
             <div class="parallax_window">
-                <div class="effect_box lax" data-lax-opacity="6500 0, 6750 1"
-                    data-lax-scale="6500 3, 6750 1, 7000 1, 7500 0 ">
+                <div class="effect_box lax" data-lax-opacity="9500 0, 10000 1"
+                    data-lax-scale="9500 3, 10000 1, 10500 1, 11000 0 ">
                     <div class="sec-08 sec">
                         <div class="title-08">
                             <i class="fas fa-circle"></i>
