關於大略切板完成

--- a/01-About.html
+++ b/01-About.html
@@ -219,14 +219,21 @@
                             <div class="about-title-00">核心價值</div>
                             <div class="about-text-00">
                                 <div class="about-text-5-team">
-                                    <i class="fas fa-circle color-gray"></i>
-                                    <div class="about-text-5-text">傳創台灣本土擊樂，廣納世界文化</div>
-                                    <i class="fas fa-circle color-gray"></i>
-                                    <div class="about-text-5-text">尊重歷史文化與之共存、共榮</div><i
-                                        class="fas fa-circle color-gray"></i>
-                                    <div class="about-text-5-text">傳承和演奏無價的工業遺產和台灣本土的樂音</div><i
-                                        class="fas fa-circle color-gray"></i>
-                                    <div class="about-text-5-text">一雙鼓棒為台灣寫下歷史之原創鼓團「十」代表鼓棒的交疊 並象徵十方力量的匯集</div>
+                                    <div class="team05">
+                                        <i class="fas fa-circle color-gray"></i>
+                                        <div class="about-text-5-text">傳創台灣本土擊樂，廣納世界文化</div>
+                                    </div>
+                                    <div class="team05"><i class="fas fa-circle color-gray"></i>
+                                        <div class="about-text-5-text">尊重歷史文化與之共存、共榮</div>
+                                    </div>
+                                    <div class="team05"><i class="fas fa-circle color-gray"></i>
+                                        <div class="about-text-5-text">傳承和演奏無價的工業遺產和台灣本土的樂音</div>
+                                    </div>
+                                    <div class="team05"><i class="fas fa-circle color-gray"></i>
+                                        <div class="about-text-5-text">一雙鼓棒為台灣寫下歷史之原創鼓團「十」代表鼓棒的交疊 並象徵十方力量的匯集</div>
+                                    </div>
+
+
                                 </div>
                             </div>
                         </div>
@@ -241,8 +248,9 @@
                     data-lax-scale="6500 3, 7000 1, 7800 1, 8000 0">
                     <div class="sec-06 sec">
                         <div class="About-06">
-                            <div class="en-title">ABOUT <u
-                                    class="line-01">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u>
+                            <div class="en-title">
+                                <div class="en-name">ABOUT</div>
+                                <div class="line-01">&emsp;</div>
                             </div>
                             <div class="cn-title">園區主題介紹</div>
                         </div>
@@ -255,30 +263,24 @@
             <!-- 鼓樂饗宴 -->
             <div class="parallax_window">
                 <div class="effect_box lax" data-lax-opacity="8000 0, 8500 1, 9500 0"
-                    data-lax-scale="8000 3, 8500 1, 9300 1, 9500 0">
+                    data-lax-scale="8000 3, 8200 1, 9300 1, 9500 0">
                     <div class="sec-07">
                         <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-01" alt="背景左">
                         <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-02" alt="背景右">
                         <div class="title-07">
                             <i class="fas fa-circle"></i>
-                            <div class="sec-07-line">
-                                <div class="sec-07-title">鼓樂饗宴</div>
-                            </div><i class="fas fa-circle"></i>
+                            <div class="sec-07-title">鼓樂饗宴</div>
+                            <i class="fas fa-circle"></i>
                         </div>
                         <div class="sec-07-context">
                             <div class="img-group">
-                                <img src="./img/十鼓樂團/3張合併_工作區域 1.png" alt="">
-                                <!-- <img src="./img/十鼓樂團/有水的打鼓照片.jpg" class="img-down" alt="">
-                            <img src="./img/十鼓樂團/海報.jpg" class="img-center" alt="">
-                            <img src="./img/十鼓樂團/海報2.jpg" class="img-top" alt=""> -->
                             </div>
                             <h3 class="sec-07-subtitle">十鼓擊樂團</h3>
                             <div class="sec-07-text sty-bol">獲海內外金曲獎、葛萊美獎、美國獨立獎三項大獎提名
                             </div>
-                            <div class="sec-07-text">以在地的題材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面貌，震撼的
-                                鼓樂和視覺效果一直以來深受觀眾喜愛。團長期望藉此喚起國人對傳統鼓樂的重視，
-                                企圖為台灣開創出一個熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格
-                                ，更期望能使台灣在世界上成為著名的【鼓樂之島】。 </div>
+                            <div class="sec-07-text">
+                                以在地的題材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面貌，震撼的鼓樂和視覺效果一直以來深受觀眾喜愛。團長期望藉此喚起國人對傳統鼓樂的重視，企圖為台灣開創出一個熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格，更期望能使台灣在世界上成為著名的【鼓樂之島】。
+                            </div>
                             <a href="./04-Drum.html" class="sec-07-more">more</a>
                         </div>
                     </div>
@@ -294,13 +296,12 @@
                     <div class="sec-08 sec">
                         <div class="title-08">
                             <i class="fas fa-circle"></i>
-                            <div class="sec-08-line">
-                                <div class="sec-08-title">極限體驗</div>
-                            </div><i class="fas fa-circle"></i>
+                            <div class="sec-08-title">極限體驗</div>
+                            <i class="fas fa-circle"></i>
                         </div>
                         <div class="sec-08-context">
                             <div class="img-group">
-                                <img src="./img/主頁背景/關於-極限體驗.jpg" class="sec-08-img" alt="">
+                                
 
                             </div>
                             <div class="sec-08-textbox">
