首頁切板完成

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <div class="Mask fadeOut"></div> -->
     <div class="index">
         <div class="Nav">
-            <img src="./img/十鼓logo去背.png" alt="" class="Logo-pic zoomer">
+            <img src="./img/其他/十鼓logo去背.png" alt="" class="Logo-pic zoomer">
             <div class="left-group">
                 <div class="Menu-group">
                     <a href="./01-About.html" class="index-btn ">
@@ -43,6 +43,7 @@
                 </div>
                 <div class="cloud-group">
                     <img src="./img/插圖/雲-01.png" alt="" class="floater cloud cloud01">
+                    <img src="./img/插圖/雲-01.png" alt="" class="pulse cloud cloud03">
                     <img src="./img/插圖/雲-02.png" alt="" class="heartbeat cloud cloud02">
                 </div>
             </div>
@@ -50,7 +51,7 @@
         </div>
         <div class="big-img">
             <div class="img-group">
-                <img src="./img/插圖/狗狗兒.png" class="img-dog " alt="">
+                <div class="img-dog">&nbsp;</div>
             </div>
         </div>
     </div>
