漢堡條切板完成、消息後待切版

--- a/06-Rented.html
+++ b/06-Rented.html
@@ -47,35 +47,43 @@
                     <div class="icon">E-mail</div> -->
                         </div>
                         <div class="btns">
-                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="far fa-home"></i></a>
+                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="fal fa-home-lg"
+                                    class="home-icon"></i></a>
                             <a href="./01-About.html" class="btn">
-                                <h1>關於十鼓</h1>
+                                <div class="btn-text">關於十鼓</div>
                             </a>
                             <a href="./02-News.html" class="btn">
-                                <h1>最新消息</h1>
+                                <div class="btn-text">最新消息</div>
                             </a>
                             <a href="./03-Facility.html" class="btn">
-                                <h1>設施體驗</h1>
+                                <div class="btn-text">設施體驗</div>
                             </a>
                             <a href="./04-Drum.html" class="btn">
-                                <h1>鼓樂饗宴</h1>
+                                <div class="btn-text">鼓樂饗宴</div>
                             </a>
                             <a href="./05-Information.html" class="btn">
-                                <h1>入園資訊</h1>
+                                <div class="btn-text">入園資訊</div>
                             </a>
                             <a href="./06-Rented.html" class="btn">
-                                <h1>場地租借</h1>
+                                <div class="btn-text">場地租借</div>
                             </a>
                         </div>
                         <div class="infor">
                             <div class="top">
-                                <div class="icon">FB</div>
-                                <div class="icon">Line</div>
-                                <div class="icon">E-mail</div>
+                                <a href="https://www.facebook.com/tendrum.cultrue/">
+                                    <div class="icon icon01">&emsp;</div>
+                                </a>
+                                <a href="https://page.line.me/qxa4359i">
+                                    <div class="icon icon02">&emsp;</div>
+                                </a>
+                                <a href="mailto:tenpc@ms43.hinet.net">
+                                    <div class="icon icon03">&emsp;</div>
+                                </a>
+
                             </div>
                         </div>
                         <div class="bott">
-                            <p>TEL06-2662225</p>
+                            <p class="eng">TEL：06-2662225</p>
                             <p>台南市仁德區文華路二段326號
                             </p>
                         </div>
@@ -88,7 +96,7 @@
     <div class="Rented">
         <div class="button-bar">
             <div class="button-g">
-                <h1 class="rented-tittle">場地出租</h1>
+                <h1 class="rented-tittle">場地租借</h1>
                 <!-- 標題 -->
                 <div class="lease-box">
                     <!-- Button trigger modal -->
