--- a/02-News.html
+++ b/02-News.html
@@ -49,37 +49,45 @@
                     <div class="icon">E-mail</div> -->
                         </div>
                         <div class="btns">
-                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="far fa-home"></i></a>
+                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="fal fa-home-lg"
+                                    class="home-icon"></i></a>
                             <a href="./01-About.html" class="btn">
-                                <h1>關於十鼓</h1>
+                                <div class="btn-text">關於十鼓</div>
                             </a>
                             <a href="./02-News.html" class="btn">
-                                <h1>最新消息</h1>
+                                <div class="btn-text">最新消息</div>
                             </a>
                             <a href="./03-Facility.html" class="btn">
-                                <h1>設施體驗</h1>
+                                <div class="btn-text">設施體驗</div>
                             </a>
                             <a href="./04-Drum.html" class="btn">
-                                <h1>鼓樂饗宴</h1>
+                                <div class="btn-text">鼓樂饗宴</div>
                             </a>
                             <a href="./05-Information.html" class="btn">
-                                <h1>入園資訊</h1>
+                                <div class="btn-text">入園資訊</div>
                             </a>
                             <a href="./06-Rented.html" class="btn">
-                                <h1>場地租借</h1>
+                                <div class="btn-text">場地租借</div>
                             </a>
                         </div>
                         <div class="infor">
                             <div class="top">
-                                <div class="icon">FB</div>
-                                <div class="icon">Line</div>
-                                <div class="icon">E-mail</div>
+                                <a href="https://www.facebook.com/tendrum.cultrue/">
+                                    <div class="icon icon01">&emsp;</div>
+                                </a>
+                                <a href="https://page.line.me/qxa4359i">
+                                    <div class="icon icon02">&emsp;</div>
+                                </a>
+                                <a href="mailto:tenpc@ms43.hinet.net">
+                                    <div class="icon icon03">&emsp;</div>
+                                </a>
+
                             </div>
                         </div>
                         <div class="bott">
-                            <p>TEL06-2662225</p>
-                            <p>台南市仁德區文華路二段326號
-                            </p>
+                            <div class="eng">TEL：06-2662225</div>
+                            <div class="address">台南市仁德區文華路二段326號</div>
+
                         </div>
                     </div>
                 </div>
@@ -108,11 +116,9 @@
                     <i class="fas fa-circle"></i>
                     <div class="new-context-group">
                         <div class="row">
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-imgs"><img
-                                            src="https://tendrum.com.tw/userfiles/images/2020_09_26%E4%BB%81%E7%B3%96%E6%BC%94%E5%87%BA%E7%95%B0%E5%8B%95%E5%85%AC%E5%91%8A.jpg"
-                                            alt="" class='new-img'></div>
+                                    <div class="new-imgs new-img-01"></div>
                                     <div class="new-time">2020-09-26</div>
                                     <div class="new-name">2020/9/26(六)演出節目異動歡迎大家選擇喜歡的場次觀賞謝謝！！</div>
                                     <div class="new-mores">
@@ -120,11 +126,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-imgs"><img
-                                            src="https://tendrum.com.tw/userfiles/images/2020_09_20%E6%97%A5%E9%96%93%E5%AE%9A%E7%9B%AE%E5%8A%87%E7%A7%BB%E8%87%B3%E6%B0%B4%E6%A7%BD%E5%8A%87%E5%A0%B4%E6%BC%94%E5%87%BA%E5%85%AC%E5%91%8A.jpg"
-                                            alt="" class='new-img'></div>
+                                    <div class="new-imgs new-img-02"></div>
                                     <div class="new-time">2020-09-20</div>
                                     <div class="new-name">2020.09.20(日)臺南十鼓仁糖文創園區 演出異動公告~~十鼓仁糖文創園區-演出節目異動..</div>
                                     <div class="new-mores">
@@ -132,11 +136,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-imgs"><img
-                                            src="https://tendrum.com.tw/userfiles/images/2020_09_08-09_09%E7%B3%96%E6%99%B6%E8%90%BD%E9%AB%94%E5%B9%B4%E5%BA%A6%E6%AA%A2%E4%BF%AE%E6%9A%AB%E5%81%9C%E5%85%AC%E5%91%8A.jpg"
-                                            alt="" class='new-img'></div>
+                                    <div class="new-imgs new-img-03"></div>
                                     <div class="new-time">2020-09-08</div>
                                     <div class="new-name">2020.09.08(二)~09.09(三)十鼓文創設施設備開放調整公告</div>
                                     <div class="new-mores">
@@ -156,11 +158,9 @@
                     <i class="fas fa-circle"></i>
                     <div class="new-context-group">
                         <div class="row">
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-imgs"><img
-                                            src="https://tendrum.com.tw/userfiles/images/2020_10_02-10_03%E6%89%8B%E5%90%88%E9%90%B5%E9%BC%93%E6%A8%82%E5%9C%98%E6%BC%94%E5%87%BA%E6%99%82%E9%96%93%E5%85%AC%E5%91%8A.jpg"
-                                            alt="" class='new-img'></div>
+                                    <div class="new-imgs new-img-04"></div>
                                     <div class="new-time">2020-10-02</div>
                                     <div class="new-name">2020/10/02(五)、10/03(六)十鼓仁糖文創園區 夜間定目劇演出....</div>
                                     <div class="new-mores">
@@ -168,11 +168,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-imgs"><img
-                                            src="https://tendrum.com.tw/userfiles/images/2020_09_26%E4%BB%81%E7%B3%96%E6%BC%94%E5%87%BA%E7%95%B0%E5%8B%95%E5%85%AC%E5%91%8A.jpg"
-                                            alt="" class='new-img'></div>
+                                    <div class="new-img new-img-05"></div>
                                     <div class="new-time">2020-09-26</div>
                                     <div class="new-name">夢糖劇場十鼓擊樂團鼓樂定目劇演出異動公告
                                     </div>
@@ -181,11 +179,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-lg-4">
+                            <div class="col-md-12 col-lg-4">
                                 <div class="news">
-                                    <div class="new-imgs"><img
-                                            src="https://scontent.frmq2-2.fna.fbcdn.net/v/t1.0-9/118851016_1719251154918227_7315808194877518376_o.jpg?_nc_cat=104&_nc_sid=730e14&_nc_ohc=gT0_04if7LYAX-IIeU1&_nc_ht=scontent.frmq2-2.fna&oh=a28b7f9e573355eea4c656204d839e66&oe=5F9F1457"
-                                            alt="" class='new-img'></div>
+                                    <div class="new-imgs new-img-06"></div>
                                     <div class="new-time">2020-09-05</div>
                                     <div class="new-name">2020/09/05(六)二手市集開幕時間:早上9:00~下午6:00。歡迎各位...
                                     </div>
