--- a/03-Facility.html
+++ b/03-Facility.html
@@ -49,35 +49,43 @@
                     <div class="icon">E-mail</div> -->
                         </div>
                         <div class="btns">
-                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="far fa-home"></i></a>
+                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="fal fa-home-lg"
+                                    class="home-icon"></i></a>
                             <a href="./01-About.html" class="btn">
-                                <h1>關於十鼓</h1>
+                                <div class="btn-text">關於十鼓</div>
                             </a>
                             <a href="./02-News.html" class="btn">
-                                <h1>最新消息</h1>
+                                <div class="btn-text">最新消息</div>
                             </a>
                             <a href="./03-Facility.html" class="btn">
-                                <h1>設施體驗</h1>
+                                <div class="btn-text">設施體驗</div>
                             </a>
                             <a href="./04-Drum.html" class="btn">
-                                <h1>鼓樂饗宴</h1>
+                                <div class="btn-text">鼓樂饗宴</div>
                             </a>
                             <a href="./05-Information.html" class="btn">
-                                <h1>入園資訊</h1>
+                                <div class="btn-text">入園資訊</div>
                             </a>
                             <a href="./06-Rented.html" class="btn">
-                                <h1>場地租借</h1>
+                                <div class="btn-text">場地租借</div>
                             </a>
                         </div>
                         <div class="infor">
                             <div class="top">
-                                <div class="icon">FB</div>
-                                <div class="icon">Line</div>
-                                <div class="icon">E-mail</div>
+                                <a href="https://www.facebook.com/tendrum.cultrue/">
+                                    <div class="icon icon01">&emsp;</div>
+                                </a>
+                                <a href="https://page.line.me/qxa4359i">
+                                    <div class="icon icon02">&emsp;</div>
+                                </a>
+                                <a href="mailto:tenpc@ms43.hinet.net">
+                                    <div class="icon icon03">&emsp;</div>
+                                </a>
+
                             </div>
                         </div>
                         <div class="bott">
-                            <p>TEL06-2662225</p>
+                            <p class="eng">TEL：06-2662225</p>
                             <p>台南市仁德區文華路二段326號
                             </p>
                         </div>
@@ -94,25 +102,61 @@
         <div class="margin-use"></div>
         <h1 class="facility-title"> 極限體驗</h1>
         <div class="img-groups">
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+            <div class="img-teams">
+                <div class="img-team">
+                    <div class="image-circle">
+                        <img src="./img/設施/飛天宅急便.jpg" class="imgg" alt="">
+                    </div>
+                    <div class="img-name floater">飛天宅急便</div>
                 </div>
-                <div class="img-name floater">飛天宅急便</div>
-            </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
-                </div>
-                <div class="img-name floater">鋼鐵鐳戰</div>
-            </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
-                </div>
-                <div class="img-name floater">蜘蛛人</div>
-            </div>
 
+                <div class="overlay bacimg-04">
+                    <div class="text-box">
+                        <br>飛天宅急便
+                        <br>是十鼓仁糖文創園區於2019年推出的高空刺激設施，要來到這裡必須先上到32公尺約11層樓高的「天堂路」，搭乘上天堂上的鞦韆，最多可以三人同時搭乘。享受高空擺盪，並能一覽台南仁德一帶的美景，在傍晚時分搭乘更是浪漫與刺激兼具，讓人腎上腺素飆升。
+                        <br>
+                        <br>
+                        <br>設施資訊：50元 / 次
+                        <br>開放時間：下午13:10~16:50、夜間 18:10~20:40
+                    </div>
+                </div>
+            </div>
+            <div class="img-teams">
+                <div class="img-team">
+                    <div class="image-circle">
+                        <img src="./img/設施/鋼鐵鐳站.jpg" class="imgg" alt="">
+                    </div>
+                    <div class="img-name floater">鋼鐵鐳戰</div>
+                </div>
+                <div class="overlay bacimg-04">
+                    <div class="text-box">
+                        <br>鋼鐵鐳戰
+                        <br>是十鼓仁糖文創園區於2019年推出的高空刺激設施，要來到這裡必須先上到32公尺約11層樓高的「天堂路」，搭乘上天堂上的鞦韆，最多可以三人同時搭乘。享受高空擺盪，並能一覽台南仁德一帶的美景，在傍晚時分搭乘更是浪漫與刺激兼具，讓人腎上腺素飆升。
+                        <br>
+                        <br>
+                        <br>設施資訊：50元 / 次
+                        <br>開放時間：下午13:10~16:50、夜間 18:10~20:40
+                    </div>
+                </div>
+            </div>            
+            <div class="img-teams">
+                <div class="img-team">
+                    <div class="image-circle">
+                        <img src="./img/設施/蜘蛛人.jpg" class="imgg" alt="">
+                    </div>
+                    <div class="img-name floater">蜘蛛人</div>
+                </div>
+                <div class="overlay bacimg-04">
+                    <div class="text-box">
+                        <br>蜘蛛人
+                        <br>是十鼓仁糖文創園區於2019年推出的高空刺激設施，要來到這裡必須先上到32公尺約11層樓高的「天堂路」，搭乘上天堂上的鞦韆，最多可以三人同時搭乘。享受高空擺盪，並能一覽台南仁德一帶的美景，在傍晚時分搭乘更是浪漫與刺激兼具，讓人腎上腺素飆升。
+                        <br>
+                        <br>
+                        <br>設施資訊：50元 / 次
+                        <br>開放時間：下午13:10~16:50、夜間 18:10~20:40
+                    </div>
+                </div>
+            </div> 
             <div class="img-teams">
                 <div class="img-team">
                     <div class="image-circle">
@@ -132,18 +176,48 @@
                     </div>
                 </div>
             </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+            <div class="img-teams">
+                <div class="img-team">
+                    <div class="image-circle">
+                        <div class="imggg">
+                            <div class="imgg"></div>
+                        </div>
+                        
+                        <!-- <img src="./img/設施/煙囪滑梯.jpg" class="imgg" alt=""> -->
+                    </div>
+                    <div class="img-name floater">煙囪滑梯</div>
                 </div>
-                <div class="img-name floater">煙囪滑梯</div>
-            </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+
+                <div class="overlay bacimg-04">
+                    <div class="text-box">
+                        <br>煙囪滑梯
+                        <br>是十鼓仁糖文創園區於2019年推出的高空刺激設施，要來到這裡必須先上到32公尺約11層樓高的「天堂路」，搭乘上天堂上的鞦韆，最多可以三人同時搭乘。享受高空擺盪，並能一覽台南仁德一帶的美景，在傍晚時分搭乘更是浪漫與刺激兼具，讓人腎上腺素飆升。
+                        <br>
+                        <br>
+                        <br>設施資訊：50元 / 次
+                        <br>開放時間：下午13:10~16:50、夜間 18:10~20:40
+                    </div>
                 </div>
-                <div class="img-name floater">糖晶落體</div>
-            </div>
+            </div><div class="img-teams">
+                <div class="img-team">
+                    <div class="image-circle">
+                        <img src="./img/設施/糖精落體.jpg" class="imgg" alt="">
+                    </div>
+                    <div class="img-name floater">糖晶落體</div>
+                </div>
+
+                <div class="overlay bacimg-04">
+                    <div class="text-box">
+                        <br>糖晶落體
+                        <br>是十鼓仁糖文創園區於2019年推出的高空刺激設施，要來到這裡必須先上到32公尺約11層樓高的「天堂路」，搭乘上天堂上的鞦韆，最多可以三人同時搭乘。享受高空擺盪，並能一覽台南仁德一帶的美景，在傍晚時分搭乘更是浪漫與刺激兼具，讓人腎上腺素飆升。
+                        <br>
+                        <br>
+                        <br>設施資訊：50元 / 次
+                        <br>開放時間：下午13:10~16:50、夜間 18:10~20:40
+                    </div>
+                </div>
+            </div>            
+            
 
         </div>
 
