--- a/05-Information.html
+++ b/05-Information.html
@@ -49,35 +49,43 @@
                     <div class="icon">E-mail</div> -->
                         </div>
                         <div class="btns">
-                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="far fa-home"></i></a>
+                            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="fal fa-home-lg"
+                                    class="home-icon"></i></a>
                             <a href="./01-About.html" class="btn">
-                                <h1>關於十鼓</h1>
+                                <div class="btn-text">關於十鼓</div>
                             </a>
                             <a href="./02-News.html" class="btn">
-                                <h1>最新消息</h1>
+                                <div class="btn-text">最新消息</div>
                             </a>
                             <a href="./03-Facility.html" class="btn">
-                                <h1>設施體驗</h1>
+                                <div class="btn-text">設施體驗</div>
                             </a>
                             <a href="./04-Drum.html" class="btn">
-                                <h1>鼓樂饗宴</h1>
+                                <div class="btn-text">鼓樂饗宴</div>
                             </a>
                             <a href="./05-Information.html" class="btn">
-                                <h1>入園資訊</h1>
+                                <div class="btn-text">入園資訊</div>
                             </a>
                             <a href="./06-Rented.html" class="btn">
-                                <h1>場地租借</h1>
+                                <div class="btn-text">場地租借</div>
                             </a>
                         </div>
                         <div class="infor">
                             <div class="top">
-                                <div class="icon">FB</div>
-                                <div class="icon">Line</div>
-                                <div class="icon">E-mail</div>
+                                <a href="https://www.facebook.com/tendrum.cultrue/">
+                                    <div class="icon icon01">&emsp;</div>
+                                </a>
+                                <a href="https://page.line.me/qxa4359i">
+                                    <div class="icon icon02">&emsp;</div>
+                                </a>
+                                <a href="mailto:tenpc@ms43.hinet.net">
+                                    <div class="icon icon03">&emsp;</div>
+                                </a>
+
                             </div>
                         </div>
                         <div class="bott">
-                            <p>TEL06-2662225</p>
+                            <p class="eng">TEL：06-2662225</p>
                             <p>台南市仁德區文華路二段326號
                             </p>
                         </div>
@@ -110,25 +118,25 @@
                 </div>
                 <div class="park_inf">
                     <div class="park_inf_photo">
-                        <img src="img/票價資訊_工作區域 1.jpg" alt="">
+                        <img src="./img/票價資訊_工作區域 1.jpg" alt="">
                     </div>
                 </div>
                 <div class="park_inf">
                     <div class="park_inf_photo">
-                        <img src="img/開園時間.jpg" alt="">
+                        <img src="./img/開園時間.jpg" alt="">
 
                     </div>
                 </div>
                 <div class="park_inf">
                     <div class="park_inf_photo">
-                        <img src="img/票價資訊_工作區域 1.jpg" alt="">
+                        <img src="./img/票價資訊_工作區域 1.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer>版權聲明</footer>
+    <footer>此網頁純練習及測試用，若有侵權疑慮請告知。</footer>
     <!-- JS -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
