--- a/04-Drum.html
+++ b/04-Drum.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/TenDrum.css">
+    <link rel="stylesheet" href="./CSS/D-Drum.css">
     <link rel="stylesheet" href="./CSS/wickedcss.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -130,7 +131,7 @@
                         </div>
                         <!-- 第一頁 -->
                         <div class="page">
-                            <img src="./img/5b84e4aeaa904.jpg" class="page-img" alt="">
+                            <img src="./img/其他/5b84e4aeaa904.jpg" class="page-img" alt="">
                         </div>
                         <!-- 第一頁 -->
                         <!-- 第二頁 關於 -->
@@ -228,7 +229,7 @@
                                     <div class="text-time">2009&emsp;</div>
                                     <div class="text-con">「鼓之島」專輯入圍第52屆葛萊美獎《最佳世界傳統音樂專輯》</div>
                                 </h6>
-                                <img src="./img/鼓樂饗宴/3張合併_工作區域 1.png" class="page-img-01" alt="">
+                                <img src="./img/十鼓樂團/3張合併_工作區域 1.png" class="page-img-01" alt="">
                                 <span class="line02">&nbsp;</span>
                             </div>
 
