--- a/01-About.html
+++ b/01-About.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./CSS/A-apple-about.css">
+
     <link rel="stylesheet" href="./CSS/TenDrum.css">
     <link rel="stylesheet" href="./CSS/wickedcss.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -309,7 +311,7 @@
                         </div>
                         <div class="sec-08-context">
                             <div class="img-group">
-                                
+
 
                             </div>
                             <div class="sec-08-textbox">
