入園資訊整合

--- a/05-Information.html
+++ b/05-Information.html
@@ -99,13 +99,18 @@
 
     <div class="park_pag">
         <div class="park_button_bar">
-            <div class="park_button_g">
+            <div class="park_button_g ">
                 <div class="park_tittle">入園資訊</div>
                 <div class="park_lease_box">開園時間</div>
                 <div class="park_lease_box">票價資訊</div>
                 <div class="park_lease_box">交通資訊</div>
-                <div class="park_lease_box">園區導覽</div>
-                <a class="park_show" href="./04-Drum.html">定目劇演出</a>
+
+                <a class="park_tour"
+                    href="https://tendrum.com.tw/userfiles/images/%E5%9C%92%E5%8D%80%E5%9C%B0%E5%9C%96_%E8%A8%AD%E6%96%BD%E6%99%82%E5%88%BB%E8%A1%A8DM(%E4%B8%AD%E6%96%87%E7%89%88)-%E6%AD%A3%E8%83%8C%E9%9D%A2-01-%E5%AE%98%E7%B6%B2%E5%B0%8F(1).jpg">園區導覽</a>
+
+                <a class="park_show" href="https://jjjin302.github.io/04-Drum.html">定目劇演出</a>
+
+
 
             </div>
 
@@ -114,25 +119,21 @@
             <div class="park_photobox">
                 <div class="park_inf park_active">
                     <div class="park_inf_photo">
-                        <img src="./img/入園資訊/開園時間-02.jpg" alt="">
+                        <img class="style_img" src="./img/入園資訊/開園時間-02.jpg" alt="">
                     </div>
                 </div>
                 <div class="park_inf">
                     <div class="park_inf_photo">
-                        <img src="./img/票價資訊_工作區域 1.jpg" alt="">
+                        <img class="style_img" src="./img/入園資訊/票價資訊_工作區域 1.jpg" alt="">
                     </div>
                 </div>
                 <div class="park_inf">
-                    <div class="park_inf_photo">
-                        <img src="./img/開園時間.jpg" alt="">
+                    <div class="park_inf_photo">\
+                        <img class="style_img" src="./img/入園資訊/交通資訊2_工作區域 1.jpg" alt="">
 
                     </div>
                 </div>
-                <div class="park_inf">
-                    <div class="park_inf_photo">
-                        <img src="./img/票價資訊_工作區域 1.jpg" alt="">
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
