--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/TenDrum.css">
+    <link rel="stylesheet" href="./CSS/Home-index.css">
     <link rel="stylesheet" href="./CSS/wickedcss.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap"
@@ -15,8 +16,7 @@
     </style>
 </head>
 
-<body>
-    <!-- <div class="Mask fadeOut"></div> -->
+<body>   
     <div class="index">
         <div class="Nav">
             <img src="./img/其他/十鼓logo去背.png" alt="" class="Logo-pic zoomer">
