調整翻書效果(實現HOVER)待整理

--- a/04-Drum.html
+++ b/04-Drum.html
@@ -126,33 +126,25 @@
             <div class="Book">
                 <div class="book">
                     <div id="pages" class="pages">
+                        <!-- 封面 -->
                         <div class="page">
-                            <div class="page-text">翻我</div>
+                            <div class="img-00 img-set">&emsp;</div>
                         </div>
+                        <!-- 封面 -->
                         <!-- 第一頁 -->
                         <div class="page">
-                            <img src="./img/其他/5b84e4aeaa904.jpg" class="page-img" alt="">
+                            <div class="page-img img-set">&emsp;</div>
+
                         </div>
                         <!-- 第一頁 -->
                         <!-- 第二頁 關於 -->
                         <div class="page">
                             <div class="page-text-about">
                                 <h3>關於十鼓樂團</h3>
-                                <h6>成立於2000年春天，『傳創台灣土本文化，發揚鼓樂藝術
-                                    薪傳』是樂團最大發展目標。而「十」字代表著鼓棒交疊，
-                                    匯集十方的能量，共同凝聚團結的力量「十鼓」以文化的力
-                                    量串連起城市運轉的特色及風格，2007年於台南縣仁德鄉成
-                                    立「十鼓文化村」，更進一步朝打造『亞洲鼓樂交流平台』
-                                    的文化發展目標努力，堅持以傳創本土擊樂藝術為定位，期
-                                    望藉此喚起國人對傳統鼓樂的重視，企圖為台灣開創出一個
-                                    熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格，更期
-                                    望能使台灣在世界上成為著名的【鼓樂之島】。</h6>
-                                <h6>多年來，樂團傳創的音樂作品深受觀眾的喜愛，以在地的題
-                                    材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面
-                                    貌，更令社會大眾驚豔原來『鼓』是如此的多元及精彩！此
-                                    外，十鼓擊樂團亦秉持：傳創本土擊樂、普及全民鼓術、落
-                                    實人本教育、開啟多元智慧、推動特教啟蒙，廣納世界文化
-                                    、為推廣鼓樂藝術之宗旨目標。</h6>
+                                <h6>成立於2000年春天，『傳創台灣土本文化，發揚鼓樂藝術薪傳』是樂團最大發展目標。而「十」字代表著鼓棒交疊，匯集十方的能量，共同凝聚團結的力量「十鼓」以文化的力量串連起城市運轉的特色及風格，2007年於台南縣仁德鄉成立「十鼓文化村」，更進一步朝打造『亞洲鼓樂交流平台』的文化發展目標努力，堅持以傳創本土擊樂藝術為定位，期望藉此喚起國人對傳統鼓樂的重視，企圖為台灣開創出一個熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格，更期望能使台灣在世界上成為著名的【鼓樂之島】。
+                                </h6>
+                                <h6>多年來，樂團傳創的音樂作品深受觀眾的喜愛，以在地的題材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面貌，更令社會大眾驚豔原來『鼓』是如此的多元及精彩！此外，十鼓擊樂團亦秉持：傳創本土擊樂、普及全民鼓術、落實人本教育、開啟多元智慧、推動特教啟蒙，廣納世界文化、為推廣鼓樂藝術之宗旨目標。
+                                </h6>
                             </div>
                         </div>
                         <!-- 第二頁 -->
@@ -241,22 +233,43 @@
                                 <span class="line03">&nbsp;</span>
                                 <h3>主要成員</h3>
                                 <div class="img-groups">
-                                    <div class="art">
-                                        <img src="./img/樂團成員/成員去背/王昱淇-截圖.png" class="art-img" alt="王昱淇">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">王昱淇</div>
+                                    <div id="art" class="art">
+                                        <div class="art-img art-img01">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="atr-text">王昱淇</div>
+                                                <div class="atr-text">鼓齡&nbsp;16年</div>
+                                                <div class="atr-text">主修&nbsp;中國打擊</div>
+                                                <div class="atr-text">進團時間&nbsp;2015年</div>
+                                                <div class="atr-text">學歷&nbsp;南華大學&nbsp;民族音樂學研究所</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="art">
-                                        <img src="./img/樂團成員/成員去背/林孟緯拷貝.png" class="art-img" alt="林孟緯">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">林孟緯</div>
+                                        <div class="art-img art-img02">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="atr-text">林孟緯</div>
+                                                <div class="atr-text">鼓齡&nbsp;15年</div>
+                                                <div class="atr-text">主修&nbsp;鼓</div>
+                                                <div class="atr-text">進團時間&nbsp;2010年</div>
+                                                <div class="atr-text">學歷&nbsp;嘉南藥理科技大學&nbsp;文化事業發展系</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="art">
-                                        <img src="./img/樂團成員/成員去背/李意瑩.png" class="art-img" alt="李意瑩">
-                                        <div class="overlay-zoom">
-                                            <div class="art-name">李意瑩</div>
+                                        <div class="art-img art-img03">
+                                        </div>
+                                        <div class="overlay-ToRight">
+                                            <div class="art-name">
+                                                <div class="art-text"></div>
+                                                <div class="art-text"></div>
+                                                <div class="art-text"></div>
+                                                <div class="art-text"></div>
+                                                <div class="art-text"></div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="art">
@@ -338,20 +351,14 @@
                         <div class="page">
                             <div class="video">
                                 <div class="video-01">
-                                    <div class="dvd"><iframe src="https://www.youtube.com/embed/kYaGHkVS_4o"
-                                            frameborder="0"
-                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe></div>
+                                    <div class="dvd"></div>
                                     <div class="dvd-text">
                                         <h4>天空斬</h4>
                                         <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及困境。鼓樂合奏詮釋忠.義.勇.武呈現出穿梭時空的對話。</h6>
                                     </div>
                                 </div>
                                 <div class="video-02">
-                                    <div class="dvd"><iframe src="https://www.youtube.com/embed/0k0zzgGx1-0"
-                                            frameborder="0"
-                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe></div>
+                                    <div class="dvd"></div>
                                     <div class="dvd-text">
                                         <h4>風馳雷擎</h4>
                                         <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
@@ -359,10 +366,7 @@
                                     </div>
                                 </div>
                                 <div class="video-01">
-                                    <div class="dvd"><iframe src="https://www.youtube.com/embed/VfUWusw3xUo"
-                                            frameborder="0"
-                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe></div>
+                                    <div class="dvd"></div>
                                     <div class="dvd-text">
                                         <h4>祈天現日</h4>
                                         <h6>十鼓以鼓樂結合武術動作，於十鼓橋頭水劇場，以長棍再現偃月刀橫掃瘟疫及
@@ -372,6 +376,7 @@
                             </div>
                         </div>
                         <!-- 第八頁 -->
+                        <div class="page"></div>
                     </div>
                 </div>
             </div>
